Rubberstamped by Sam Weinig.

https://webkit.org/b/22851 - Remove defunct FIXME.

* html/HTMLPlugInElement.cpp:
(WebCore::HTMLPlugInElement::HTMLPlugInElement): This flag was removed completely
  from the HTMLFrameOwnerElement chain of classes.



Canonical link: https://commits.webkit.org/43459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52035 268f45cc-cd09-0410-ab3c-d52691b4dbfc